--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,7 +60,14 @@ android {
     }
 
     packagingOptions {
-        exclude '/META-INF/{AL2.0,LGPL2.1}'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/*.kotlin_module'
         jniLibs {
             useLegacyPackaging = true
         }
@@ -80,7 +87,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.24"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.github.anoop44:ics-openvpn:master-SNAPSHOT'
+    implementation 'com.github.nizwar:openvpn_library:b3941ef040'
 }
