--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   http: ^1.2.0
-  permission_handler: ^11.3.0  # Перенесено на отдельную строку
-  openvpn_flutter: ^1.3.2
+  permission_handler: ^10.2.0
+  openvpn_flutter: ^1.2.2
   dio: ^5.4.0
 
 
