Обновлены конфигурации и зависимости проекта

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,7 +24,7 @@ android/gradle.properties:
 */
 
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.24'
     ext.gradle_version = '7.3.0'
     
     repositories {
@@ -37,7 +37,7 @@ buildscript {
     
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.24"
     }
 }
 
@@ -45,19 +45,17 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://storage.googleapis.com/download.flutter.io' }
         maven { 
             url 'https://jitpack.io'
-            content {
-                includeGroup "com.github.anoop44"
-            }
         }
-        maven { url "https://storage.googleapis.com/download.flutter.io" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 
     configurations.all {
         resolutionStrategy {
-            force 'com.github.anoop44:ics-openvpn:master-SNAPSHOT'
+            force "org.jetbrains.kotlin:kotlin-stdlib:1.9.24"
+            force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.24"
+            force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.24"
         }
     }
 }
